--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-burger-menu": "^2.8.3",
+    "@types/react-pdf": "^6.2.0",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "tailwindcss": "^3.2.4"
   }
